app-nginx.yaml

### service of app-nginx
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: ingress-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort

---
### Deploy for app-nginx
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ingress-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
